fix mobile img not showing

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -713,9 +713,7 @@ span.typing-text {
   border: 2px solid var(--off-white);
   border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
   animation: morphBlob 8s ease-in-out infinite;
-  background-repeat: no-repeat;
-  background-image: var(--img-avatar);
-
+  background-image: var(--image-avatar);
   background-size: cover;
 }
 
